# daily-assignments-python

./: README.md
day-1/01_numbers/: Numbers.ipynb
day-1/02_strings/: Strings.ipynb
day-1/03_lists/: Lists.ipynb
day-1/04_tuples/: Tuples.ipynb
day-1/05_sets/: Sets.ipynb
day-1/06_dictionaries/: Dictionaries.ipynb
day-1/08_looping/: Loops.ipynb
day-10/async-python/: async_primes_tutorial.md  asyncio_detailed_guide.md  asyncio_ex.py  prime-with-async-cpu-bound.py  primes-with-async-io-bound.py  primes-without-async.py  threadpoolexecutor_guide.md  (+1 more)
day-12/typer_calculator/: README.md  pyproject.toml
day-12/typer_calculator/typer_calculator/: calculator.py
day-12/typer_calculator/typer_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
day-3/: regular-expressions.ipynb
day-4/: s1-comprehensions.ipynb  s1-special-funcitons-and-modules.ipynb  s2-exploring-functions.ipynb
day-5/: new-project.py  primes.py  s1-file-input-output.ipynb  s1-functions-with-types-pydantic.ipynb  s2-exception-handling.ipynb  s2-solved-problems.ipynb
day-6/: s1-classes-and-objects.ipynb  s2-oop-built-in-functions.ipynb  word-jumble-game-oop-version.py
day-7/: Anil_save.pkl  data.pkl  game-persistance.py  game_save.pkl  s1-inheritance-polymorphism.ipynb  s1-operator-overloading.ipynb  s1-static-and-class-methods.ipynb  s2-custom-exceptions.ipynb  s2-pickle-load.ipynb  s2-pickle-save.ipynb  word-jumble-game-oop-version-with-persistance.py
day-8/: s1-abstract-classes.ipynb  s1-meta-classes.ipynb
friday-hackathons/: 01-ecom-insights.md
(+104 files in other folders)
